Edit and Delete User Data

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,32 @@ a {
   text-decoration: none;
 }
 
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+
+.loader {
+  width: 30px;
+  height: 30px;
+  border: 5px solid #fff;
+  border-bottom-color: #2697f3;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 /* Loading Spinner Styles - ADDED */
 .loading-overlay {
   position: fixed;
